// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`global mutliple 1`] = `
Program {
  "children": Array [
    Global {
      "items": Array [
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
      ],
      "kind": "global",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`global simple 1`] = `
Program {
  "children": Array [
    Global {
      "items": Array [
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
      ],
      "kind": "global",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
